[tool.poetry]
name = "bigchem"
version = "0.6.1"
description = "A distributed system for scaling and parallelizing quantum chemistry calculations"
authors = ["Colton Hicks <github@coltonhicks.com>"]
readme = "README.md"
homepage = "https://github.com/mtzgroup/bigchem"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.1"
celery = { extras = ["redis"], version = "^5.2.7" }
pydantic = ">=2.0.0"
qcio = ">=0.7.0"
pydantic-settings = "^2.0.3"
# A list of all of the optional dependencies, some of which are included in the below
# `extras`. They can be opted into by apps. Clients should not need to install these.
geometric = { version = ">=1.0.1", optional = true }
qcengine = { version = ">=0.27.0", optional = true }
qcop = ">=0.4.6"

[tool.poetry.extras]
geometric = ["geometric"]
qcengine = ["qcengine"]

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.4.1"
isort = "^5.10.1"
pytest = "^7.1.2"
pre-commit = "^2.19.0"
pytest-cov = "^3.0.0"
pytest-timeout = "^2.1.0"
boto3 = "^1.26.82"
paramiko = "^3.0.0"
types-paramiko = "^3.0.0.4"
ruff = "^0.0.278"
geometric = ">=1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests/"
addopts = "-m 'not integration'"
markers = [
  "integration: marks tests as integration (deselect with '-m \"not integration\"')",
]


[tool.black]
line-length = 88

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.ruff.per-file-ignores]
'bigchem/__init__.py' = ['F405', 'F403']

[tool.coverage.run]
branch = true
omit = ["*/tests/*", "*/migrations/*", "*site-packages*", "*__init__.py"]

[tool.mypy]
plugins = "pydantic.mypy"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
