[tool.poetry]
name = "bigchem"
version = "0.10.4"
description = "A distributed system for scaling and parallelizing quantum chemistry calculations"
authors = ["Colton Hicks <github@coltonhicks.com>"]
readme = "README.md"
repository = "https://github.com/mtzgroup/bigchem"
homepage = "https://github.com/mtzgroup/bigchem"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
celery = { version = "^5.3.4", extras = ["redis"] }
pydantic = "^2.0.0"
qcop = ">=0.9.7"
pydantic-settings = "^2.0.3"

# A list of all of the optional dependencies, some of which are included in the below
# `extras`. They can be opted into by apps. Clients should not need to install these.
geometric = { version = "^1.0.1", optional = true }
qcengine = { version = "^0.28.0", optional = true }

[tool.poetry.extras]
geometric = ["geometric"]
qcengine = ["qcengine"]
all = ["geometric", "qcengine"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
mypy = "^1.4.1"
pytest = "^7.1.2"
pre-commit = "^2.19.0"
pytest-cov = "^3.0.0"
pytest-timeout = "^2.1.0"
boto3 = "^1.26.82"
paramiko = "^3.0.0"
types-paramiko = "^3.0.0.4"
geometric = ">=1.0.1"
qcengine = "^0.28.0"
types-toml = "^0.10.8.20240310"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests/"
addopts = "-m 'not integration'"
markers = [
  "integration: marks tests as integration (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
isort = { known-first-party = ["qcop", "tests"] }
select = ["I", "F401"]

[tool.ruff.lint.per-file-ignores]
'bigchem/__init__.py' = ['F405', 'F403']

[tool.coverage.run]
branch = true
omit = ["*/tests/*", "*/migrations/*", "*site-packages*", "*__init__.py"]

[tool.mypy]
plugins = "pydantic.mypy"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.typos]
# Exclude specific files or directories
files.extend-exclude = [".vscode/**"]
