[project]
name = "bigchem"
version = "0.10.8"
description = "A distributed system for scaling and parallelizing quantum chemistry calculations"
authors = [{ name = "Colton Hicks", email = "github@coltonhicks.com" }]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
    "celery[redis]>=5.3.4,<6.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "qcop>=0.10.2",
    "pydantic-settings>=2.0.3,<3.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/mtzgroup/bigchem"
Source = "https://github.com/mtzgroup/bigchem"
Changelog = "https://github.com/mtzgroup/bigchem/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/mtzgroup/bigchem/issues"
repository = "https://github.com/mtzgroup/bigchem"

[project.optional-dependencies]
geometric = ["geometric>=1.0.1"]
qcengine = ["qcengine>=0.28.0"]
all = ["geometric>=1.0.1", "qcengine>=0.28.0"]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pre-commit>=2.19.0",
    "pytest-cov>=6.1.0",
    "pytest-timeout>=2.1.0",
    "boto3>=1.26.82",
    "paramiko>=3.0.0",
    "types-paramiko>=3.0.0.4",
    "geometric>=1.0.1",
    "qcengine>=0.28.0",
    "toml>=0.10.2",
    "types-toml>=0.10.8.20240310",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
testpaths = ["tests/"]
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
isort = { known-first-party = ["bigchem", "tests"] }
select = ["I", "F401"]

[tool.ruff.lint.per-file-ignores]
"src/bigchem/__init__.py" = ["F405", "F403"]

[tool.coverage.run]
branch = true
omit = ["*/tests/*", "*/migrations/*", "*site-packages*", "*__init__.py"]

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.typos]
files.extend-exclude = [".vscode/**"]
